[package]
name = "bitcoin_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27"     
secp256k1 = "0.23"   
serde = { version = "1.0", features = ["derive"] } 
reqwest = { version = "0.11", features = ["blocking"] } 
